--- a/config/database.yml
+++ b/config/database.yml
@@ -26,6 +26,6 @@ production:
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   host: <%= ENV['DB_HOST'] %>
   socket: /var/lib/mysql/mysql.sock
-  database: blog_api_production
+  database: progline_api_production
   username: <%= ENV['DB_USERNAME'] %>
   password: <%= ENV['DB_PASSWORD'] %>
