--- a/prd/Dockerfile
+++ b/prd/Dockerfile
@@ -1,4 +1,4 @@
-FROM ruby:2.7.4
+FROM ruby:3.2.2
 RUN apt-get update -qq && \
     apt-get install -y build-essential \
                        libpq-dev \
@@ -13,4 +13,4 @@ RUN bundle install --without test development
 ADD . /app
 EXPOSE 3000
 
-CMD ["/bin/sh", "-c", "bundle exec rails db:create && bundle exec rails db:migrate && bundle exec unicorn -p 3000 -c /app/config/unicorn.rb -E production"]
+CMD ["/bin/sh", "-c", "bundle exec rails db:create && bundle exec rails db:migrate && bundle exec rails db:seed && bundle exec unicorn -p 3000 -c /app/config/unicorn.rb -E production"]
