--- a/test/fixtures/services.yml
+++ b/test/fixtures/services.yml
@@ -2,10 +2,10 @@
 
 one:
   name: MyString
-  image_url: MyString
+  original_url: MyString
   is_original: false
 
 two:
   name: MyString
-  image_url: MyString
+  original_url: MyString
   is_original: false
